--- a/.github/workflows/gitbook-action.yml
+++ b/.github/workflows/gitbook-action.yml
@@ -13,3 +13,4 @@ jobs:
       uses: zanderzhao/gitbook-action@v1.2.4
       with:
         token: ${{ secrets.PERSONAL_TOKEN }}
+    - publish_nojekyll: true
